fix for disables on iphone

--- a/public/css/media.css
+++ b/public/css/media.css
@@ -284,7 +284,8 @@
 	}
 
 	.expired-token-notifier {
-		top: 30px;
+		top: 35px;
+		left: 10px;
 	}
 }
 
